--- a/lyceum/locale/ru/LC_MESSAGES/django.po
+++ b/lyceum/locale/ru/LC_MESSAGES/django.po
@@ -21,15 +21,15 @@ msgstr ""
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
 #: .\lyceum\settings.py:119
 msgid "English"
-msgstr ""
+msgstr "Английский"
 
 #: .\lyceum\settings.py:120
 msgid "Russian"
-msgstr ""
+msgstr "Русский"
 
 #: .\templates\includes\header.html:12
 msgid "To main"
-msgstr "На главную"
+msgstr "Главная"
 
 #: .\templates\includes\header.html:18
 msgid "About"
