--- a/lyceum/locale/en/LC_MESSAGES/django.po
+++ b/lyceum/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-26 09:56+0300\n"
+"POT-Creation-Date: 2023-10-28 10:54+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #: .\lyceum\settings.py:119
 msgid "English"
 msgstr ""
@@ -36,3 +37,7 @@ msgstr "About"
 #: .\templates\includes\header.html:24
 msgid "List of products"
 msgstr "List of products"
+
+#: .\templates\includes\item_card.html:12
+msgid "More details"
+msgstr "More details"
